--- a/PageCss/style.css
+++ b/PageCss/style.css
@@ -27,7 +27,7 @@
     border: solid;
     width: 300px;
     margin-top: 20px;;
-    margin-left: 495px;
+    margin-left: 593px;
 }
 
 .cupons{
@@ -37,8 +37,8 @@
     color:white;
     height: 70px;
     width: 280px;
-    margin-top: 2%;
-    margin-left: 38.8%;
+    margin-top: 1%;
+    margin-left: 40.5%;
 }
 
 
@@ -49,8 +49,8 @@
     color:white;
     height: 70px;
     width: 230px;
-    margin-top: -5.7%;
-    margin-left: 21.3%;
+    margin-top: -5.2%;
+    margin-left: 22.8%;
 }
 
 .lanyear{
@@ -61,11 +61,15 @@
     height: 69.5px;
     width: 230px;
     margin-top: -77.0px;
-    margin-left: 58.5%;
+    margin-left: 61.5%;
+}
+
+.h2title0{
+    padding-left: 16px;
 }
 
 .h2title{
-    padding-left: 20px;
+    padding-left: 30px;
 }
 
 .h2title1{
@@ -77,17 +81,84 @@
 }
 
 .fpageprodu{
-    height: 600px;
-    width: 950px;
+    height: 660px;
+    width: 1140px;
     border-color: black;
     border: solid;
     border-radius: 5px;
     margin-top: 3%;
     margin-left: 13%;
 }
+
+.formatimg{
+    height: 250px;
+    width: 250px;
+    border-radius: 10px;
+    border: solid;
+    border-color: black;
+    cursor: pointer;
+   
+}
+
+.formatimg:hover{
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    transform: scale(1.2); 
+}
+
+.m1{
+    margin-top: 70px;
+    margin-left: 50px;
+    height: 250px;
+    width: 250px;
+}
+
+.m2{
+    margin-left: 92px;
+   margin-top: 2px;
+    height: 250px;
+    width: 250px;
+}
+
+.m3{
+    position: relative;
+    top: -3%;
+    margin-left: 750px;
+    margin-top:-300.2px;
+    height: 250px;
+    width: 250px;
+}
+
+.m4{
+    margin-top: 2%;
+    margin-left: 4.8%;
+    left: 4.4%;
+    height: 250px;
+    width: 250px;
+}
+
+.m5{
+    margin-top: -100%;
+    margin-left: 90.0px;
+    background-color: red;
+}
+
+.m6{
+    position: relative;
+    top: -2%;
+    margin-top: -290px;
+    margin-left: 65.9%;
+    height: 250px;
+    width: 250px;
+}
+
+/* Hover Zoom */
+
+
+
 /* Class of Carrosel */
 .galery {
-    width: 1352px;
+    width: 1503px;
     height: 300px;
     background-color: rgb(8, 8, 8);
     overflow: hidden;
