--- a/PageCss/style.css
+++ b/PageCss/style.css
@@ -9,10 +9,15 @@
 
 
 .letterMenu{
-    margin-top: 50px;
+    margin-top: -100px;
+    position: relative;
+    top: -140%;
+    margin-left: 2%;
     color:white;
     display: inline;
-    padding-left: 10px;
+    padding-left: 12px;
+    font-size: 135%;
+    text-decoration: none;
 }
 
 .menu{
@@ -20,7 +25,7 @@
  height: 50px;
  width: 700px;;
  margin-left: 32%;
- margin-top: 38px;
+ margin-top: 32px;
 }
 
 .message{
@@ -89,7 +94,16 @@
     margin-top: 3%;
     margin-left: 13%;
 }
-
+.iconlogo{
+    cursor: pointer;
+    position: relative;
+    left: 435px;
+    top: -10px;
+    height:40px;
+    width: 40px;
+    margin-top: -110px;
+    margin-right: 750px;
+}
 .formatimg{
     height: 250px;
     width: 250px;
@@ -150,6 +164,12 @@
     margin-left: 65.9%;
     height: 250px;
     width: 250px;
+}
+
+.iconmarket{
+    height: 40px;
+    margin-left: 1445px;
+    margin-top: 2%;;
 }
 
 /* Hover Zoom */
