--- a/PageCss/style.css
+++ b/PageCss/style.css
@@ -99,8 +99,8 @@
     position: relative;
     left: 435px;
     top: -10px;
-    height:40px;
-    width: 40px;
+    height:35px;
+    width: 35px;
     margin-top: -110px;
     margin-right: 750px;
 }
@@ -167,6 +167,8 @@
 }
 
 .iconmarket{
+    position: relative;
+    top: 10px;
     height: 40px;
     margin-left: 1445px;
     margin-top: 2%;;
